# sonalyze-backend

./: .dockerignore  .env.sample  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: aal-backend-AutoDeployTrigger-8336f6b7-0c76-4b06-97c2-b8dfa9d7f359.yml  cicd.yml  development-cicd.yml  main-cicd.yml
src/: main.py
src/api/: router.py
src/api/endpoints/: __init__.py  calibration.py  impulse_response.py  measurement_routes.py  room_routes.py  test.py  user_routes.py
src/api/models/: measurement.py  post_models.py  room.py  room_scene.py  simulation.py
src/database/: __init__.py  engine.py
src/database/models/: TestDbModel.py  __init__.py
src/database/schemas/: __init__.py  material_db.py  measurement_db.py  room_db.py  user_db.py
src/models/: __init__.py  acoustic_parameters.py  material.py  measurement.py  scene.py
src/services/: analysis_service.py  auth_service.py  calibration_utils.py  filter_ir_service.py  filter_service.py  get_material.py  mapper_service.py  measurement_service.py  simulation_service.py
src/sio/: __init__.py  models.py  socketio_server.py  socketio_server.pyi
src/sio/events/: lobby_events.py  measurement_events.py
src/tests/: test_example.py
