[project]
name = "aal-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "python-socketio[asgi]>=5.13.0",
]
[tool.mypy]
disable_error_code = ["import-untyped"]